News UAT/force-app/main/default/objects/Lead/fields/Linked_Account_RingLead__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account_RingLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Account (RingLead)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>