News UAT/force-app/main/default/objects/Lead/fields/Marketing_Channel_NX_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel_NX_ANZ__c</fullName>
    <label>Marketing Channel - NX ANZ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>