News UAT/force-app/main/default/objects/Lead/fields/mkto2__Original_Referrer__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Original_Referrer__c</fullName>
    <label>Original Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>