News UAT/force-app/main/default/objects/Lead/fields/mkto2__Original_Source_Info__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Original_Source_Info__c</fullName>
    <defaultValue>&quot;Lead&quot;</defaultValue>
    <label>Original Source Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>