News UAT/force-app/main/default/objects/Lead/fields/Mobile_DNC_Is_Contactable__c.field-meta.xml
<CustomField>
    <fullName>Mobile_DNC_Is_Contactable__c</fullName>
    <formula>IF( 
Mobile_on_DNC__c = FALSE &amp;&amp; 
NOT ISBLANK(Mobile_DNC_Washed_Date__c) &amp;&amp; 
TODAY() - Mobile_DNC_Washed_Date__c &lt; 31, 
TRUE, FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile DNC Is Contactable</label>
    <type>Checkbox</type>
</CustomField>