News UAT/force-app/main/default/objects/Lead/fields/Mobile_on_DNC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_on_DNC__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates of the phone number is on the Do Not Call Register</description>
    <label>Mobile on DNC</label>
    <type>Checkbox</type>
</CustomField>