News UAT/force-app/main/default/objects/Lead/fields/Monthly_Digital_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Digital_Budget__c</fullName>
    <label>Monthly Digital Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>