News UAT/force-app/main/default/objects/Lead/fields/MQL_First_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_First_Date__c</fullName>
    <label>MQL First Date</label>
    <type>Date</type>
</CustomField>