News UAT/force-app/main/default/objects/Lead/fields/MQL_Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Latest_Date__c</fullName>
    <label>MQL Latest Date</label>
    <type>Date</type>
</CustomField>