News UAT/force-app/main/default/objects/Lead/fields/No_Parent__c.field-meta.xml
<CustomField>
    <fullName>No_Parent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No Parent</label>
    <type>Checkbox</type>
</CustomField>