News UAT/force-app/main/default/objects/Lead/fields/Phone_DNC_Is_Contactable__c.field-meta.xml
<CustomField>
    <fullName>Phone_DNC_Is_Contactable__c</fullName>
    <description>This phone number is contactable if the the number is Not in DNC, has a Wash Date, and the Wash Date is at most 30 days from today</description>
    <formula>IF( 
Phone_on_DNC__c = FALSE &amp;&amp; 
NOT ISBLANK(Phone_DNC_Washed_Date__c) &amp;&amp; 
TODAY() - Phone_DNC_Washed_Date__c &lt; 31, 
TRUE, FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This phone number is contactable if the the number is Not in DNC, has a Wash Date, and the Wash Date is at most 30 days from today</inlineHelpText>
    <label>Phone DNC Is Contactable</label>
    <type>Checkbox</type>
</CustomField>