News UAT/force-app/main/default/objects/Lead/fields/Phone_DNC_Washed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_DNC_Washed_Date__c</fullName>
    <label>Phone DNC Washed Date</label>
    <type>Date</type>
</CustomField>