News UAT/force-app/main/default/objects/Lead/fields/Product_Opt_In_Community_Print__c.field-meta.xml
<CustomField>
    <fullName>Product_Opt_In_Community_Print__c</fullName>
    <description>Driven via sync - with the Subscription Centre in Marketo</description>
    <inlineHelpText>Marketing Permission for the Customer. Only applies to marketing activities.</inlineHelpText>
    <label>Marketing Product - Community Print</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>