News UAT/force-app/main/default/objects/Lead/fields/RecentLeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>RecentLeadSourceDetail__c</fullName>
    <description>field to assist in Lead to case. Connected to recent Lead source date</description>
    <label>Recent Lead Source Detail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>