News UAT/force-app/main/default/objects/Lead/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>Identifying ANZ or Other Customer Accounts from NX Website via Marketo for NX Lite
Will be used to exclude from other NCA Print Marketo Campaigns Offers</description>
    <inlineHelpText>Identifying ANZ or Other Customer Accounts from NX Website via Marketo for NX Lite
Will be used to exclude from other NCA Print Marketo Campaigns Offers</inlineHelpText>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Referral_Source</valueSetName>
    </valueSet>
</CustomField>