News UAT/force-app/main/default/objects/Lead/fields/SAL_First_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_First_Date__c</fullName>
    <label>SAL First Date</label>
    <type>Date</type>
</CustomField>