News UAT/force-app/main/default/objects/Lead/fields/SAL_Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Latest_Date__c</fullName>
    <label>SAL Latest Date</label>
    <type>Date</type>
</CustomField>