News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Business_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Business_Account_Type</fullName>
    <active>true</active>
    <description>Requires a Company Name if the Account Type is a Business</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Account_Type__c, &#39;Business&#39;),
  ISBLANK( Company )
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>You must provide a Company name if the Lead is a Business (Account Type)</errorMessage>
</ValidationRule>