News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Conv_ContactInfo_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conv_ContactInfo_Email</fullName>
    <active>true</active>
    <description>Ensure that the relevant Contact information is provided based on the selected Channel</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status, &#39;Qualified&#39;),
  ISBLANK(Email ),
  ISPICKVAL( Channel__c , &#39;Email&#39;)
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>An Email Address needs to be provided if the Lead Channel is Email</errorMessage>
</ValidationRule>