News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Conv_ContactInfo_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conv_ContactInfo_Event</fullName>
    <active>true</active>
    <description>Ensure that the relevant Contact information is provided based on the selected Channel</description>
    <errorConditionFormula>AND( 
  ISPICKVAL( Status, &#39;Qualified&#39;),
  ISPICKVAL( Channel__c , &#39;Event&#39;),
  OR(
    ISBLANK(Email ),
    ISBLANK(Phone)
  ) 
)</errorConditionFormula>
    <errorMessage>An Email Address or Phone number needs to be provided if the Lead Channel is Event</errorMessage>
</ValidationRule>