News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Conv_ContactInfo_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conv_ContactInfo_Phone</fullName>
    <active>true</active>
    <description>Ensure that the relevant Contact information is provided based on the selected Channel</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status, &#39;Qualified&#39;),
  
    ISBLANK( Phone ),
    ISBLANK( MobilePhone),
  
  OR(
    ISPICKVAL(  Channel__c , &#39;Phone&#39;),
    ISPICKVAL(  Channel__c , &#39;SMS&#39;)
  )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>A Phone number must be provided if the Lead Channel is Phone or SMS</errorMessage>
</ValidationRule>