News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Person_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Person_Account_Type</fullName>
    <active>true</active>
    <description>Requires a Company Name if the Account Type is a Business</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Account_Type__c, &#39;Individual&#39;), 
NOT(ISBLANK( Company ) )
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>You cannot provide a Company name if the Lead is an Individual (Account Type)</errorMessage>
</ValidationRule>