News UAT/force-app/main/default/objects/Lead/validationRules/Lead_Phone_Number_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Phone_Number_Format_Validation</fullName>
    <active>true</active>
    <description>The Lead phone number fields must be numeric, with the exception of a leading +.</description>
    <errorConditionFormula>OR(IF (NOT(ISBLANK( MobilePhone )), 
Not(ISNUMBER(MobilePhone)), 
NULL),IF (NOT(ISBLANK(Phone)), 
Not(ISNUMBER(Phone)), 
NULL), CONTAINS(MobilePhone, &#39;.&#39;), CONTAINS(Phone, &#39;.&#39;), IF (NOT(ISBLANK(Fax)), 
Not(ISNUMBER(Fax)), 
NULL), CONTAINS(Fax, &#39;.&#39;))</errorConditionFormula>
    <errorMessage>All Phone/Fax fields on Lead must be numeric only, with the exception of a leading +.</errorMessage>
</ValidationRule>