News UAT/force-app/main/default/objects/Lead/listViews/Assigned_Leads.listView-meta.xml
<ListView>
    <fullName>Assigned_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <label>My Assigned Leads</label>
</ListView>